test/llvm/alignment/check-align-padding-error.good
check-align-padding-error.chpl:36: error: unhandled misaligned record member
